feat: add customer self service API
